k8s/gateway/httproute-posts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: post-service
  namespace: fb-live-comments
spec:
  parentRefs:
    - name: api-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/users
      backendRefs:
        - name: post-service
          port: 8000
    - matches:
        - path:
            type: Exact
            value: /v1/posts
      backendRefs:
        - name: post-service
          port: 8000

    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - name: post-service
          port: 8000
